--- a/pkgs/libs/gsl/src/doc/qrng.texi
+++ b/pkgs/libs/gsl/src/doc/qrng.texi
@@ -155,6 +155,7 @@ The implementations of the quasi-random sequence routines are based on
 the algorithms described in the following paper,
 
 @itemize @asis
+@item
 P. Bratley and B.L. Fox and H. Niederreiter, ``Algorithm 738: Programs
 to Generate Niederreiter's Low-discrepancy Sequences'', @cite{ACM
 Transactions on Mathematical Software}, Vol.@: 20, No.@: 4, December, 1994,
