--- a/pkgs/libs/gsl/src/doc/rng.texi
+++ b/pkgs/libs/gsl/src/doc/rng.texi
@@ -1392,6 +1392,7 @@ Further information is available in the review paper written by Pierre
 L'Ecuyer,
 
 @itemize @asis
+@item
 P. L'Ecuyer, ``Random Number Generation'', Chapter 4 of the
 Handbook on Simulation, Jerry Banks Ed., Wiley, 1998, 93--137.
 
