--- a/pkgs/libs/ssl/src/doc/ssl/SSL_get_fd.pod
+++ b/pkgs/libs/ssl/src/doc/ssl/SSL_get_fd.pod
@@ -26,7 +26,7 @@ The following return values can occur:
 
 =over 4
 
-=item -1
+=item C<-1>
 
 The operation failed, because the underlying BIO is not of the correct type
 (suitable for file descriptors).
